[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
rusqlite = "0.28.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
mongodb = "2.3.1"
serde = { version = "1.0.14", features = ["derive"] }
serde_json = "1.0.87"
